[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[lib]
    crate-type = ["cdylib"]
    doctest = false

    [dependencies]
    soroban-sdk = { version = "0.9.2" }
    serde-json-core = "0.5.1"
   serde = {default-features=false, features = ["derive"]}
  

  
   rand = { version = "0.7.3" }

    [dev_dependencies]
    soroban-sdk = { version = "0.9.2", features = ["testutils"] }
   base64 = "0.13.0"

    [profile.release]
    opt-level = "z"
    overflow-checks = true
    debug = 0
    strip = "symbols"
    debug-assertions = false
    panic = "abort"
    codegen-units = 1
    lto = true

    [profile.release-with-logs]
    inherits = "release"
    debug-assertions = true


