[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[lib]
    crate-type = ["cdylib"]
    doctest = false

   [dependencies]
soroban-sdk = { version = "20.0.0-rc1" }
soroban-token-sdk = { version = "20.0.0-rc1" }
    serde_json = "1.0"
    stellar-strkey = "0.0.7"
base64 = "0.13.0"
   serde = {default-features=false, features = ["derive"]}
  

  
   rand = { version = "0.7.3" }

    [dev_dependencies]
   soroban-sdk = { version = "20.0.0-rc1", features = ["testutils"] }
   base64 = "0.13.0"

    [profile.release]
    opt-level = "z"
    overflow-checks = true
    debug = 0
    strip = "symbols"
    debug-assertions = false
    panic = "abort"
    codegen-units = 1
    lto = true

    [profile.release-with-logs]
    inherits = "release"
    debug-assertions = true


